Bug 399532 - "nsDisplayBackground::GetBounds() should take nsITheme overflow into account" [p=frnchfrgg-mozbugs@altern.org (_FrnchFrgg_) r+sr=roc a1.9=beltzner]